--- a/src/scss/pages/index/parts/_quick_service.scss
+++ b/src/scss/pages/index/parts/_quick_service.scss
@@ -646,6 +646,20 @@
         }
       }
     }
+    > .btn-close-modal-mode {
+      position: fixed;
+      right: 0;
+      bottom: 40px;
+      left: 0;
+      display: none;
+      width: 40px;
+      height: 40px;
+      margin: 0 auto;
+      border-radius: 50%;
+      background: $white url("./assets/icons/sprite_sheet_2.png") -108px -110px;
+      box-shadow: 2px 2px 8px 2px rgb(0 0 0 / 10%);
+      z-index: $skip-z-index;
+    }
   }
 }
 
