FEAT: login.html

--- a/src/html/partials/template.html
+++ b/src/html/partials/template.html
@@ -15,7 +15,16 @@
     <include src="header.html"></include>
     <!-- // HEADER -->
 
-    <include src="location_bar.html"></include>
+    <div id="location-bar">
+      <div class="container">
+        <a href="/" class="link-home">
+          <span class="blind">메인으로 이동</span>
+        </a>
+        <ul>
+          <li><a href="/login.html">로그인</a></li>
+        </ul>
+      </div>
+    </div>
     <!-- // LOCATION BAR -->
 
     <main></main>
