--- a/src/scss/pages/_commons.scss
+++ b/src/scss/pages/_commons.scss
@@ -6,4 +6,5 @@
 
 @import "@/scss/partials/skip";
 @import "@/scss/partials/header";
+@import "@/scss/partials/location_bar";
 @import "@/scss/partials/footer";
