--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -2,6 +2,7 @@
 @import "./mixins/vertical_bar";
 @import "./mixins/bullet";
 @import "./mixins/arrow";
+@import "./mixins/input";
 @import "./mixins/button";
 @import "./mixins/select";
 @import "./mixins/dropdown";
