--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -8,7 +8,7 @@
     <!-- // LEFT -->
 
     <ul class="right">
-      <li><a href="#">로그인</a></li>
+      <li><a href="/login.html">로그인</a></li>
       <li><a href="#">이벤트</a></li>
       <li class="customer-service">
         <a href="#">고객서비스</a>
@@ -69,7 +69,7 @@
   <div class="mega-menu-content-bg"></div>
   <div class="container">
     <h1 class="logo">
-      <a href="#">
+      <a href="/">
         <img src="./assets/icons/logo.png" alt="아시아나 에어라인 로고" />
       </a>
     </h1>
