FEAT: header mega menu a hover effect

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -270,6 +270,10 @@
                         color: #555;
                         font-size: 14px;
                         line-height: 1.5;
+                        &:hover {
+                          color: $red;
+                          text-decoration: underline;
+                        }
                       }
                     }
                   }
