--- a/src/scss/pages/index/parts/_modal_coupon.scss
+++ b/src/scss/pages/index/parts/_modal_coupon.scss
@@ -1,30 +1,24 @@
 #modal-coupon {
-  position: absolute;
-  top: 50%;
+  position: fixed;
+  top: 0;
   right: 0;
+  bottom: 0;
   left: 0;
   display: none;
-  width: 500px;
-  height: 285px;
-  margin: 0 auto;
-  background-color: $white;
-  transform: translateY(-50%);
+  background-color: rgb(0 0 0 / 70%);
   z-index: $skip-z-index;
-  &::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(0 0 0 / 70%);
-    z-index: -1;
-  }
   &.on {
     display: block;
   }
   .container {
-    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 500px;
+    height: 285px;
+    margin: auto;
     background-color: $white;
     > .btn-close {
       @include icon-x;
